--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "noImplicitAny": true,
         "removeComments": true,
         "sourceMap": false,
+        "strictNullChecks": false,
         "strict": true
     },
     "include": [
